--- a/fit-hero/package.json
+++ b/fit-hero/package.json
@@ -18,7 +18,8 @@
     "next-auth": "^4.24.11",
     "prisma": "^6.14.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "zod": "^4.1.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
