--- a/fit-hero/package.json
+++ b/fit-hero/package.json
@@ -13,9 +13,11 @@
     "@auth/prisma-adapter": "^2.10.0",
     "@prisma/client": "^6.14.0",
     "@types/bcryptjs": "^3.0.0",
+    "@types/nodemailer": "^7.0.1",
     "bcryptjs": "^3.0.2",
     "next": "15.4.6",
     "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.1",
     "prisma": "^6.14.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
