fix: Update Azure workflow to trigger on main branch
- Change deployment trigger from feat/ai-service-migrate-to-azure to main
- Prepares workflow for main branch deployment after merge

--- a/.github/workflows/feat-ai-service-migrate-to-azure_fit-hero-ai-service-uk.yml
+++ b/.github/workflows/feat-ai-service-migrate-to-azure_fit-hero-ai-service-uk.yml
@@ -7,7 +7,7 @@ name: Build and deploy Python app to Azure Web App - fit-hero-ai-service-uk
 on:
   push:
     branches:
-      - feat/ai-service-migrate-to-azure
+      - main
   workflow_dispatch:
 
 jobs:
