--- a/.github/workflows/main_fit-hero-ai-service-uk.yml
+++ b/.github/workflows/main_fit-hero-ai-service-uk.yml
@@ -25,12 +25,16 @@ jobs:
           python-version: '3.11'
 
       - name: Create and start virtual environment
+        working-directory: ./fit-hero-ai-service
         run: |
           python -m venv venv
           source venv/bin/activate
       
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        working-directory: ./fit-hero-ai-service
+        run: |
+          source venv/bin/activate
+          pip install -r requirements.txt
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
@@ -39,13 +43,15 @@ jobs:
         with:
           name: python-app
           path: |
-            .
-            !venv/
+            fit-hero-ai-service/
+            !fit-hero-ai-service/venv/
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    
+    permissions:
+      contents: read #This is required for actions/checkout
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
